# jacub

./: .gitignore  1  CMakeLists.txt  Jacub.xml  PropioceptionModule.cpp  input_examples  jacub.sh  matchedS_example  mind  readme  res_position  worldCommands.txt
2017-05-10 PiaDev/: PiaWorld  Plot
2017-05-10 PiaDev/files/: data.json
2017-05-10 PiaDev/src/: Ball.java  CEmotional.java  CTactile.java  CVisual.java  Color.java  Context.java  JSON.java  Match.java  Mind.java  PiaWorld.java  Scheme.java  Size.java  Texture.java
contexts/: simulator.ini
contexts/jacub/: config.ini
contexts/joystickCtrl/: ikart.ini  xbox_win.ini
contexts/simCartesianControl/: all.xml  cartesianSolver.ini
contexts/simConfig/: Sim_head.ini  Sim_left_arm.ini  Sim_torso.ini  iCub_parts_activation.ini  ode_params.ini  simulator.ini
contexts/skinGui/: skinManLeft.ini
ejemplos/imageProcessing/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  findLocation  lookAtLocation
jacub/: jacub.cbp
memory/: kb.json  kb2.json  kb_prueba2.json  kb_prueba3.json  kb_prueba4.json  perception.json
modules/emotion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  emotion  emotion.xml  install_manifest.txt
modules/emotion/src/: EmotionModule.cpp  emotion.cpp
modules/iDevER/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.ini  iDevER  install_manifest.txt
modules/memory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  memory
modules/percepction/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  perception
modules/propioception/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.ini  install_manifest.txt  propioception
modules/world/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  jworld
pruebas/: corrector  preprooo  prueba1.txt  prueba2.txt  prueba3.txt  prueba3_resultados.txt  prueba4.txt
schemas/: KB.json  kb.json  learned.json  perception.json
src/: .JacubSim.init.swp  .World.java.swp  3DObject.cpp  3DObject.h  Agent.java  CMakeCache.txt  CMakeLists.txt  Jacub.java  JacubSim.init  Makefile  Perception.java  Propioception  Propioception.cpp  Schema.cpp  Schema.h  VisualContext.cpp  World.java  WorldInit.sh  cmake_install.cmake  iDevER.cpp  igrabber.cpp  mind.cpp  percepcion  propioception  visualPerception  visualPerception.cpp
src/modules/DevER/: CMakeLists.txt  DevER
src/modules/DevER/src/: DevERModule.cpp  main.cpp
src/modules/action/: CMakeLists.txt  action.xml
src/modules/action/src/: Action.cpp
src/modules/attention/: CMakeLists.txt  attention  perception
src/modules/attention/src/: AttentionModule.cpp  main.cpp
src/modules/emotion/src/: EmotionModule.cpp  main.cpp
src/modules/locomotion/: CMakeLists.txt  locomotion
src/modules/locomotion/src/: Locomotion.cpp  main.cpp
src/modules/memory/: CMakeLists.txt  ltmemory  memory
src/modules/memory/src/: LTMemory.cpp  MemoryModule.cpp  WMemory.cpp  main.cpp  memory.cpp
src/modules/perception/: CMakeLists.txt  config.ini  perception
src/modules/perception/src/: PerceptionModule.cpp  main.cpp
src/modules/world/: CMakeLists.txt  world
src/modules/world/src/: World.cpp
src/utils/: jutils.cpp  jutils.h  schemaUtils.cpp  schemaUtils.h
(+44 files in other folders)
